recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:8: error: not found: type double
def square(dist:double){
                ^